package org.midonet.cluster.data.storage;
option java_package = "org.midonet.cluster.data.storage";
option java_outer_classname = "StorageEval";


message EvalResult {
    optional string timestamp = 1;
    message TestItem {
        optional string item_name = 1;
        message TestData {
            optional string property = 1;
            optional string value = 2;
            optional int64 latency_milli_sec = 3;
        }
        repeated TestData data = 2;
    }
    repeated TestItem test_item= 2;
}

message BulkUpdateEval {
    optional string id = 1;
    optional string name = 2;
    enum Type {
        LOCAL_ZK_ZOOM = 1;
    }
    optional Type type = 3;
    optional int32 num_threads = 4;
    optional int32 trial_size = 5;

    message Topology {
        optional int32 num_tenants = 1;
        optional int32 bridges_per_tenant = 2;
        optional int32 ports_per_bridge = 3;
        optional int32 num_rules_per_bridge_chains = 4;
    }
    optional Topology topology = 6;

    repeated EvalResult result = 7;
}